# alimentador-rs

./: Cargo.toml  README.md
crates/hardware/: Cargo.toml  todo.md
crates/hardware/src/: dosificador.rs  lib.rs  logger.rs  selectora.rs  silo.rs  soplador.rs  todo.md  traits.rs
crates/hardware/src/errors/: mod.rs  todo.md
crates/hardware/src/log/: dosificador.rs  silo.rs  soplador.rs
crates/hardware/src/logs/: dosificador.rs  mod.rs  silo.rs  soplador.rs
crates/hardware/tests/: dosificador.rs  logger.rs  logs.rs  selectora.rs  silo.rs  soplador.rs  todo.md  traits.rs
crates/system/: Cargo.toml
crates/system/src/: ciclo.rs  lib.rs  programa.rs  racion.rs  traits.rs
crates/system/src/errors/: mod.rs
crates/system/src/logs/: ciclo.rs  mod.rs  racion.rs
crates/system/tests/: ciclo.rs  programa.rs  racion.rs
crates/utils/src/: utils.rs
src/: dosificador.rs  main.rs  programa.rs  racion.rs  silo.rs  soplador.rs  utils.rs
src/lib/: sleep.rs
src/traits/: debug.rs
types/src/: lib.rs  rango.rs
